--- a/views/index.html
+++ b/views/index.html
@@ -24,8 +24,9 @@
         </p>
       </div>
       <div class="footer">
+          <p>Project Completed By Aryansh Malviya</p>
         <p>
-          by <a href="https://www.freecodecamp.org">freeCodeCamp</a>
+          Template provided by <a href="https://www.freecodecamp.org">freeCodeCamp</a>
         </p>
       </div>
    </body>
